Refactor: replaced UUIDs with 4-digit String IDs across the project for better usability